--- a/LSTM.ipynb
+++ b/LSTM.ipynb
@@ -19,11 +19,11 @@
       "metadata": {
         "id": "YIm_dad3NrvK",
         "colab_type": "code",
+        "outputId": "80dd6869-fe21-4583-8061-04f224625d41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "26931b71-ab1b-4546-ecdf-c95ae2afcb73"
+        }
       },
       "source": [
         "import tensorflow as tf\n",
@@ -48,6 +48,7 @@
       "metadata": {
         "id": "FBri0LLCPwC0",
         "colab_type": "code",
+        "outputId": "16866677-0f40-4dc3-cec5-f6b8c0f5738f",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -65,8 +66,7 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 139
-        },
-        "outputId": "dbdb6f25-bf76-4e0f-bcf6-dffaec05fe57"
+        }
       },
       "source": [
         "from google.colab import files\n",
@@ -76,15 +76,15 @@
         "      name=fn, length=len(uploaded[fn])))\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-b5483911-7927-4283-8f79-2bb078370fe3\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-b5483911-7927-4283-8f79-2bb078370fe3\">\n",
+              "     <input type=\"file\" id=\"files-18c5bef7-1fee-470a-9c4f-998133b7ada1\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-18c5bef7-1fee-470a-9c4f-998133b7ada1\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -104,7 +104,7 @@
             "Saving test.csv to test.csv\n",
             "Saving train.csv to train.csv\n",
             "User uploaded file \"test.csv\" with length 313984 bytes\n",
-            "User uploaded file \"train.csv\" with length 3501243 bytes\n"
+            "User uploaded file \"train.csv\" with length 3525026 bytes\n"
           ],
           "name": "stdout"
         }
@@ -145,11 +145,11 @@
       "metadata": {
         "id": "X_ddp5w2UZIC",
         "colab_type": "code",
+        "outputId": "64e69fe9-4c8c-4045-b1a7-5e44cafec0ef",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "0db38cb3-04f4-45ff-fcc1-ff4f257e3dfa"
+          "height": 153
+        }
       },
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
@@ -185,18 +185,25 @@
         "Y_test = Y_test.reshape(-1,1) \n",
         "#print(seq)\n"
       ],
-      "execution_count": 61,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "[[    0     0     0 ...     1   150    49]\n",
-            " [    0     0     0 ...    10  1427  2190]\n",
-            " [    0     0     0 ...     9 11028    16]\n",
+            " [    0     0     0 ...    10  1484  2188]\n",
+            " [    0     0     0 ...     9 11016    16]\n",
             " ...\n",
-            " [    0     0     0 ...   614   852  2622]\n",
-            " [    0     0     0 ...    28   702     6]\n",
-            " [    0     0     0 ...  2465   227   659]]\n"
+            " [    0     0     0 ...   613   860  2620]\n",
+            " [    0     0     0 ...    28   701     6]\n",
+            " [    0     0     0 ...  2464   227   658]]\n"
           ],
           "name": "stdout"
         }
@@ -207,11 +214,11 @@
       "metadata": {
         "id": "Ai5oNJS29UzS",
         "colab_type": "code",
+        "outputId": "c6cae5e4-378d-43b6-af45-6bd04a968bd8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 717
-        },
-        "outputId": "e283f737-82b8-4efa-c0ee-787e3552fc3d"
+        }
       },
       "source": [
         "from keras.models import Model\n",
@@ -235,22 +242,22 @@
         "          validation_split=0.2)\n",
         "#validation_split=0.2: 20% data for valildation\n"
       ],
-      "execution_count": 59,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"model_26\"\n",
+            "Model: \"model_2\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_15 (InputLayer)        (None, 37)                0         \n",
+            "input_2 (InputLayer)         (None, 37)                0         \n",
             "_________________________________________________________________\n",
-            "embedding_26 (Embedding)     (None, 37, 40)            1099200   \n",
+            "embedding_2 (Embedding)      (None, 37, 40)            1099200   \n",
             "_________________________________________________________________\n",
-            "lstm_27 (LSTM)               (None, 128)               86528     \n",
+            "lstm_2 (LSTM)                (None, 128)               86528     \n",
             "_________________________________________________________________\n",
-            "dense_14 (Dense)             (None, 3)                 387       \n",
+            "dense_2 (Dense)              (None, 3)                 387       \n",
             "=================================================================\n",
             "Total params: 1,186,115\n",
             "Trainable params: 1,186,115\n",
@@ -272,25 +279,25 @@
           "text": [
             "Train on 21984 samples, validate on 5496 samples\n",
             "Epoch 1/10\n",
-            "21984/21984 [==============================] - 13s 597us/step - loss: 0.9522 - accuracy: 0.5298 - val_loss: 0.8289 - val_accuracy: 0.6297\n",
+            "21984/21984 [==============================] - 12s 532us/step - loss: 0.9470 - accuracy: 0.5395 - val_loss: 0.7724 - val_accuracy: 0.6674\n",
             "Epoch 2/10\n",
-            "21984/21984 [==============================] - 13s 574us/step - loss: 0.7000 - accuracy: 0.7050 - val_loss: 0.6991 - val_accuracy: 0.7041\n",
+            "21984/21984 [==============================] - 11s 515us/step - loss: 0.7022 - accuracy: 0.7055 - val_loss: 0.7124 - val_accuracy: 0.7032\n",
             "Epoch 3/10\n",
-            "21984/21984 [==============================] - 13s 571us/step - loss: 0.5941 - accuracy: 0.7620 - val_loss: 0.6896 - val_accuracy: 0.7100\n",
+            "21984/21984 [==============================] - 11s 505us/step - loss: 0.6013 - accuracy: 0.7590 - val_loss: 0.6872 - val_accuracy: 0.7127\n",
             "Epoch 4/10\n",
-            "21984/21984 [==============================] - 12s 566us/step - loss: 0.5280 - accuracy: 0.7930 - val_loss: 0.6965 - val_accuracy: 0.7060\n",
+            "21984/21984 [==============================] - 11s 507us/step - loss: 0.5328 - accuracy: 0.7892 - val_loss: 0.7414 - val_accuracy: 0.7191\n",
             "Epoch 5/10\n",
-            "21984/21984 [==============================] - 13s 570us/step - loss: 0.4733 - accuracy: 0.8177 - val_loss: 0.7179 - val_accuracy: 0.7120\n",
+            "21984/21984 [==============================] - 11s 506us/step - loss: 0.4836 - accuracy: 0.8136 - val_loss: 0.7150 - val_accuracy: 0.7043\n",
             "Epoch 6/10\n",
-            "21984/21984 [==============================] - 13s 569us/step - loss: 0.4299 - accuracy: 0.8412 - val_loss: 0.7240 - val_accuracy: 0.6903\n",
+            "21984/21984 [==============================] - 11s 507us/step - loss: 0.4377 - accuracy: 0.8363 - val_loss: 0.7869 - val_accuracy: 0.6883\n",
             "Epoch 7/10\n",
-            "21984/21984 [==============================] - 12s 558us/step - loss: 0.3922 - accuracy: 0.8540 - val_loss: 0.7617 - val_accuracy: 0.6981\n",
+            "21984/21984 [==============================] - 11s 506us/step - loss: 0.4037 - accuracy: 0.8525 - val_loss: 0.7923 - val_accuracy: 0.6989\n",
             "Epoch 8/10\n",
-            "21984/21984 [==============================] - 12s 566us/step - loss: 0.3608 - accuracy: 0.8693 - val_loss: 0.7668 - val_accuracy: 0.6947\n",
+            "21984/21984 [==============================] - 11s 497us/step - loss: 0.3710 - accuracy: 0.8649 - val_loss: 0.7860 - val_accuracy: 0.6978\n",
             "Epoch 9/10\n",
-            "21984/21984 [==============================] - 12s 556us/step - loss: 0.3351 - accuracy: 0.8785 - val_loss: 0.8211 - val_accuracy: 0.6916\n",
+            "21984/21984 [==============================] - 11s 515us/step - loss: 0.3443 - accuracy: 0.8757 - val_loss: 0.8415 - val_accuracy: 0.6969\n",
             "Epoch 10/10\n",
-            "21984/21984 [==============================] - 12s 558us/step - loss: 0.3111 - accuracy: 0.8883 - val_loss: 0.8507 - val_accuracy: 0.6798\n"
+            "21984/21984 [==============================] - 11s 510us/step - loss: 0.3212 - accuracy: 0.8827 - val_loss: 0.8752 - val_accuracy: 0.6889\n"
           ],
           "name": "stdout"
         },
@@ -298,13 +305,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.callbacks.History at 0x7fb758521b00>"
+              "<keras.callbacks.callbacks.History at 0x7f4165d5cb38>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 6
         }
       ]
     },
@@ -313,11 +320,11 @@
       "metadata": {
         "id": "n9wGou7Z6FOn",
         "colab_type": "code",
+        "outputId": "cf6cb820-4fb0-4e20-d3a0-efbc6dadc54d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "328284c0-7117-41f3-ea59-dfa1f6675a60"
+        }
       },
       "source": [
         "accuracy = model.evaluate(seq_test,Y_test)\n",
@@ -326,15 +333,15 @@
         "print(\"Accuracy: \", accuracy[1])\n",
         "\n"
       ],
-      "execution_count": 58,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3534/3534 [==============================] - 1s 203us/step\n",
-            "Test set\n",
-            "  Loss: 0.847\n",
-            "  Accuracy: 0.684\n"
+            "3534/3534 [==============================] - 1s 201us/step\n",
+            "Test Data Size:  3534\n",
+            "Loss:  0.8677736697860808\n",
+            "Accuracy:  0.6887379884719849\n"
           ],
           "name": "stdout"
         }
